# WGTimeout

./: CMakeLists.txt  README.md  connect.cpp  connect.h  libssh2.lib  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  users.cpp  users.h  wgt_ru.qm  wgt_ru.ts
WGT/: CMakeLists.txt  connect.cpp  connect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  users.cpp  users.h
